--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,6 +8,12 @@
         "workTabTitle":"Work",
         "workTabDescription":"Learn about Jeanine White's most recent projects",
         "aboutTabTitle":"About",
-        "aboutTabDescription":"About Jeanine White Lorem Ipsum"
+        "aboutTabDescription":"About Jeanine White Lorem Ipsum",
+        "menuTitle":"Menu"
+    },
+    "menu":{
+        "home":"Home",
+        "work":"Work",
+        "about":"About"
     }
 }
